# WM

./: .gitignore  LICENSE  README.md  main.pyw  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  python-package.yml  test.yml
WM/: __init__.py  core.py  event.py  main.py  style.py  views.py
WM/TK/: __init__.py  elements.py
WM/Win32/: __init__.py  _core.py  constants.py  structures.py
